# telemetry-platform

./: .gitignore
infra/compose/: docker-compose.yml
services/ingest/: Cargo.toml  Dockerfile
services/ingest/migrations/: 001_initial.sql
services/ingest/src/: main.rs
services/realtime/: Cargo.toml  Dockerfile
services/realtime/src/: main.rs
web/: Dockerfile  package-lock.json
web/src/lib/: api.ts
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/events/: +page.svelte
web/src/routes/sources/: +page.svelte
